--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_ENV=local ## prod
+APP_KEY=base64:54zM7Acf958DP4zpIdJ3pmc1U08P2YexT6BvpRVX9iI=
+APP_DEBUG=true ## false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -9,13 +9,13 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=tasks
+DB_USERNAME=dm #local
+DB_PASSWORD=m7n!9Sk-J4 #local
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -23,14 +23,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=*******@gmail.com
+MAIL_PASSWORD=************
+MAIL_ENCRYPTION=ssl
+
+MAIL_FROM_ADDRESS=********@gmail.com
+MAIL_FROM_NAME=*******
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
